<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/img_foto"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/profile"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/nama_kodok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/kodokers"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_foto"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_dari_anime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/anime"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/nama_kodok"
                    app:layout_constraintTop_toBottomOf="@+id/nama_kodok" />

                <TextView
                    android:id="@+id/tv_anime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/judul_anime"
                    app:layout_constraintStart_toEndOf="@+id/tv_dari_anime"
                    app:layout_constraintTop_toBottomOf="@+id/nama_kodok" />

                <TextView
                    android:id="@+id/jelaskan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/explain"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_dari_anime"
                    app:layout_constraintTop_toBottomOf="@+id/tv_dari_anime" />

                <TextView
                    android:id="@+id/tv_item_penjelasan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:justificationMode="inter_word"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/jelaskan"
                    app:layout_constraintTop_toBottomOf="@+id/jelaskan" />

                <Button
                    android:id="@+id/action_share"
                    android:layout_width="108dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Share"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_item_penjelasan" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_share"
                    app:layout_constraintBottom_toBottomOf="@+id/action_share"
                    app:layout_constraintEnd_toEndOf="@+id/action_share"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/action_share"
                    app:layout_constraintTop_toTopOf="@+id/action_share" />


        </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>